package com.feria.modelos;

public interface EstrategiaDescuento {
    double calcularDescuento(double total, int cantidad);
}